--- a/practice.ipynb
+++ b/practice.ipynb
@@ -248,7 +248,7 @@
     "    for i in range(10):\n",
     "        if num[i] in s:\n",
     "            answer+=numm[i]\n",
-    "        elif numm[i] in s:\n",
+    "        elif numint[i] in s:\n",
     "            answer+=numm[i]\n",
     "\n",
     "    return int(answer)\n",
@@ -260,20 +260,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "6\n",
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(arr):\n",
+    "    sum = 0\n",
+    "    for i in arr:\n",
+    "        sum += i\n",
+    "        print(sum)\n",
+    "        answer = sum / len(arr)\n",
+    "    return answer\n",
+    "solution([1, 2, 3, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1478"
+       "8"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "def solution(num):\n",
+    "    answer = 0\n",
+    "    while num != 1:\n",
+    "        if num % 2 == 0:\n",
+    "            num = (num / 2)\n",
+    "        elif num % 2 != 0:\n",
+    "            num = ((num * 3) + 1)\n",
+    "        answer += 1\n",
+    "    if answer > 500:\n",
+    "        answer = -1\n",
+    "    return answer\n",
+    "\n",
+    "solution(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(num):\n",
+    "    if num % 2 == 0:\n",
+    "        answer = 'Even'\n",
+    "    elif num % 2 != 0:\n",
+    "        answer = 'Odd'\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(x):\n",
+    "    answer = None\n",
+    "    x = str(x)\n",
+    "    for i in range(len(x)):\n",
+    "        for _ in range(1, len(x) -1):\n",
+    "            if (int(x[i])+ int(x[i+_])) % int(x) == 0:\n",
+    "               answer = True\n",
+    "            else:\n",
+    "               answer = False\n",
+    "    return answer\n",
+    "\n",
+    "solution(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(x):\n",
+    "    answer = None\n",
+    "    xstr = str(x)\n",
+    "    sumnum = 0\n",
+    "    for i in xstr:\n",
+    "        sumnum += int(i)\n",
+    "    if x % sumnum == 0:\n",
+    "        answer = True\n",
+    "    else:\n",
+    "        answer = False\n",
+    "\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'TUE'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(a, b):\n",
+    "    import pandas as pd\n",
+    "    year = 2016\n",
+    "    month = a\n",
+    "    day = b\n",
+    "    date = f\"{year}-{month}-{day}\"\n",
+    "    date = pd.to_datetime(date)\n",
+    "    answer = date.day_name()\n",
+    "    answer = answer[0:3].upper()\n",
+    "    return answer\n",
+    "\n",
+    "solution(5, 24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dc'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(s):\n",
+    "    answer = ''\n",
+    "    a = len(s)\n",
+    "    if a % 2 == 1:\n",
+    "        answer += s[int(a/2)]\n",
+    "    else:\n",
+    "        answer += s[int(a/2)-1] + s[int(a/2)]\n",
+    "    \n",
+    "    return answer\n",
+    "s = 'abcdef'\n",
+    "solution(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 10]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(arr, divisor):\n",
+    "    arr.sort()\n",
+    "    answer = list(filter(lambda x: x % divisor == 0, arr))\n",
+    "    if len(answer) == 0:\n",
+    "        return [-1]\n",
+    "    return answer\n",
+    "solution([5, 9, 7, 10], 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
