--- a/practice.ipynb
+++ b/practice.ipynb
@@ -481,30 +481,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(a, b):\n",
+    "    if a == b: \n",
+    "        return a \n",
+    "\n",
+    "    if a > b:\n",
+    "        a, b = b, a \n",
+    "\n",
+    "    total_sum = 0\n",
+    "    for num in range(a, b + 1):\n",
+    "        total_sum += num\n",
+    "\n",
+    "    return total_sum"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "-1\n",
+      "-2\n",
+      "-3\n",
+      "-4\n",
+      "-5\n",
+      "-6\n",
+      "-7\n",
+      "-8\n",
+      "-9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,-10, -1):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "<class 'tuple'>\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_a = [\"A\", \"B\", \"C\"]\n",
+    "list_b = [\"X\", \"Y\", \"Z\"]\n",
+    "\n",
+    "for i in list(zip(list_a, list_b)):\n",
+    "    list(i)\n",
+    "    print(type(i))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 2]\n",
+      "('a', 2)\n",
+      "['b', 4]\n",
+      "('b', 4)\n",
+      "['c', 6]\n",
+      "('c', 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst1 = ['a','b','c']\n",
+    "lst2 = [2,4,6,8]\n",
+    "for i in list(zip(lst1,lst2)):\n",
+    "    print(list(i))\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('abcd', 'abce', 'cdx')"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(strings, n):\n",
+    "    answer = []\n",
+    "    if n == 0:\n",
+    "        a = [strings[1], strings[2]]\n",
+    "        a.sort()\n",
+    "        answer = strings[n], a[0], a[1]\n",
+    "    elif n == 1:\n",
+    "        a = [strings[0], strings[2]]\n",
+    "        a.sort()\n",
+    "        answer = a[0], strings[n], a[1]\n",
+    "    else:\n",
+    "        a = [strings[0], strings[1]]\n",
+    "        a.sort()\n",
+    "        answer = a[0], a[1], strings[n]\n",
+    "\n",
+    "\n",
+    "    return answer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def solution(strings, n):\n",
+    "    answer = sorted(strings, key=lambda x: (x[2], x))\n",
+    "\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (346817934.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[65], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    answer = arr.sort()[-1].del\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": []
   }
  ],
