--- a/practice.ipynb
+++ b/practice.ipynb
@@ -21,6 +21,12 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -626,18 +632,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (346817934.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[65], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    answer = arr.sort()[-1].del\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def solution(arr):\n",
+    "    if len(arr) == 1:\n",
+    "        arr = [-1]\n",
+    "    else:\n",
+    "        a = min(arr)\n",
+    "        arr.remove(a)\n",
+    "    answer = arr\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(phone_number):\n",
+    "    a = len(phone_number)-4\n",
+    "    b = phone_number[-4:]\n",
+    "    answer = \"*\" * a + b\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n, m):\n",
+    "    \n",
+    "    answer = []\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
