--- a/practice.ipynb
+++ b/practice.ipynb
@@ -676,7 +676,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(array, commands):\n",
+    "    answer = []\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1, 5, 2, 6, 3, 7, 4]\n",
+    "b = sorted(a[1:5])\n",
+    "b[2]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n",
+      "3\n",
+      "4\n",
+      "4\n",
+      "1\n",
+      "1\n",
+      "7\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "commands = [[2, 5, 3], [4, 4, 1], [1, 7, 3]]\n",
+    "for i in range(3):\n",
+    "    for _ in range(3):\n",
+    "        a = commands[i][_]\n",
+    "        print(a)"
+   ]
   }
  ],
  "metadata": {
