--- a/practice.ipynb
+++ b/practice.ipynb
@@ -728,9 +728,8 @@
    "source": [
     "commands = [[2, 5, 3], [4, 4, 1], [1, 7, 3]]\n",
     "for i in range(3):\n",
-    "    for _ in range(3):\n",
-    "        a = commands[i][_]\n",
-    "        print(a)"
+    "    a, b, c = commands[i]\n",
+    "    "
    ]
   }
  ],
