--- a/practice.ipynb
+++ b/practice.ipynb
@@ -731,6 +731,88 @@
     "    a, b, c = commands[i]\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(array, commands):\n",
+    "    answer = []\n",
+    "    for i in range(len(commands)):\n",
+    "        a, b, c = commands[i]\n",
+    "        so = sorted(array[a-1:b])\n",
+    "        answer.append(so[c-1])\n",
+    "    return answer\n",
+    "solution([1, 5, 2, 6, 3, 7, 4], [[2, 5, 3], [4, 4, 1], [1, 7, 3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(answers):\n",
+    "    import math\n",
+    "    answer = []\n",
+    "    num1 = []\n",
+    "    num2 = []\n",
+    "    num3 = []\n",
+    "    no1 = []\n",
+    "    for i in range(1, 6):\n",
+    "        no1.append(i)\n",
+    "    no1 = no1 * len(answers)\n",
+    "    no1 = no1[:len(answers)]    \n",
+    "    no2 = [2, 1, 2, 3, 2, 4, 2, 5] * len(answers)\n",
+    "    no2 = no2[:len(answers)]\n",
+    "    no3 = [3, 3, 1, 1, 2, 2, 4, 4, 5, 5]  * len(answers)\n",
+    "    no3 = no3[:len(answers)]\n",
+    "    for i in range(len(answers)):\n",
+    "        print(answers[i], 'answer')\n",
+    "        print(no3[i], 'no3')\n",
+    "        if answers[i] == no1[i]:\n",
+    "            num1.append(answers[i])\n",
+    "        if answers[i] == no2[i]:\n",
+    "            num2.append(answers[i])\n",
+    "        if answers[i] == no3[i]:\n",
+    "            num3.append(answers[i])\n",
+    "        print(num3, \"num3\")\n",
+    "    if len(num1) > len(num2) and len(num1) > len(num3):\n",
+    "        answer.append(1)\n",
+    "    elif len(num2) > len(num1) and len(num2) > len(num3):\n",
+    "        answer.append(2)\n",
+    "    elif len(num3) > len(num1) and len(num3) > len(num2):\n",
+    "        answer.append(3)\n",
+    "    elif len(num1) == len(num2) and len(num1) == len(num3):\n",
+    "        answer = [1, 2, 3]\n",
+    "    elif len(num1) == len(num2) and len(num1) > len(num3):\n",
+    "        answer = [1, 2]\n",
+    "    elif len(num2) == len(num3) and len(num2) > len(num1):\n",
+    "        answer = [2, 3]\n",
+    "    elif len(num1) == len(num3) and len(num1) > len(num2):\n",
+    "        answer = [1, 3]\n",
+    "    \n",
+    "    \n",
+    "        \n",
+    "    return answer\n",
+    "solution([1, 3, 2, 4, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
