--- a/practice.ipynb
+++ b/practice.ipynb
@@ -802,6 +802,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 2, 1, 5]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(N, stages):\n",
+    "    answer = []\n",
+    "    count_clear = []\n",
+    "    count_notclear = []\n",
+    "    per = {}\n",
+    "    for i in range(1, N+1):\n",
+    "        count_notclear.append(stages.count(i))\n",
+    "    \n",
+    "    for i in range(1,N+1):\n",
+    "        count_clear_len = []\n",
+    "        for _ in a:\n",
+    "            if i <= _:\n",
+    "                count_clear_len.append(i)\n",
+    "        count_clear.append(len(count_clear_len))\n",
+    "    \n",
+    "    for i in range(len(count_notclear)):\n",
+    "        b = count_notclear[i] / count_clear[i]\n",
+    "        per[i+1] = b\n",
+    "    \n",
+    "    per = sorted(per.items(), key = lambda item: item[1], reverse = True)\n",
+    "    for i in range(N):\n",
+    "        answer.append(per[i][0])\n",
+    "    return answer\n",
+    "solution(5, [2, 1, 2, 6, 2, 4, 3, 3])\n",
+    "## 70% 뭐가 문제인지 모르겠다."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
