실패율 수정

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
        "[3, 4, 2, 1, 5]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,8 +826,8 @@
     "        count_notclear.append(stages.count(i))\n",
     "    \n",
     "    for i in range(1,N+1):\n",
-    "        count_clear_len = []\n",
-    "        for _ in a:\n",
+    "        count_clear_len = list()\n",
+    "        for _ in stages:\n",
     "            if i <= _:\n",
     "                count_clear_len.append(i)\n",
     "        count_clear.append(len(count_clear_len))\n",
@@ -849,14 +849,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(N, stages):\n",
+    "    answer = []\n",
+    "    count_clear = []\n",
+    "    count_notclear = []\n",
+    "    per = []\n",
+    "    \n",
+    "    for i in range(1, N+1):\n",
+    "        count_notclear.append(stages.count(i))\n",
+    "    \n",
+    "    total_users = len(stages)\n",
+    "    for i in range(1, N+1):\n",
+    "        if total_users == 0:\n",
+    "            failure_rate = 0\n",
+    "        else:\n",
+    "            failure_rate = count_notclear[i-1] / total_users\n",
+    "        per.append((i, failure_rate))\n",
+    "        total_users -= count_notclear[i-1]\n",
+    "    \n",
+    "    per = sorted(per, key=lambda x: x[1], reverse=True)\n",
+    "    answer = [x[0] for x in per]\n",
+    "    return answer\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(record):\n",
+    "    answer = []\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[\"Enter uid1234 Muzi\", \"Enter uid4567 Prodo\",\"Leave uid1234\",\"Enter uid1234 Prodo\",\"Change uid4567 Ryan\"]\n",
+    "#uid를 추출해서 딕트값의 키로 저장하고 닉네임을 value값으로 지정\n",
+    "#닉네임은 어떻게 추출을 해야하지? enter를 해야 생성이\n",
+    "#닉네임이 바뀐다면 유저아이디에서 value값을 바꾸기\n",
+    "#다시나갔다가 들어온 유저의 닉네임도 바꿔야함.\n",
+    "#set형식으로 ?\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
